doc: add documentation for organization endpoint
